--- a/data_preparation/create_train_data.ipynb
+++ b/data_preparation/create_train_data.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ultra-mnist\n"
+      "d:\\Hackathons\\Kaggle\\ultra-mnist\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9f346b2d-6745-4235-9f9a-7a48afde647e",
    "metadata": {},
    "outputs": [
@@ -138,33 +138,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>jmwdcbkdqn</td>\n",
-       "      <td>11</td>\n",
-       "      <td>input/train/jmwdcbkdqn.jpeg</td>\n",
+       "      <td>vyctxmodyu</td>\n",
+       "      <td>12</td>\n",
+       "      <td>input/train/vyctxmodyu.jpeg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>azjintiubk</td>\n",
-       "      <td>20</td>\n",
-       "      <td>input/train/azjintiubk.jpeg</td>\n",
+       "      <td>kghlqhpshk</td>\n",
+       "      <td>14</td>\n",
+       "      <td>input/train/kghlqhpshk.jpeg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>iagdhkonwb</td>\n",
-       "      <td>2</td>\n",
-       "      <td>input/train/iagdhkonwb.jpeg</td>\n",
+       "      <td>rfznywdgjo</td>\n",
+       "      <td>19</td>\n",
+       "      <td>input/train/rfznywdgjo.jpeg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>kcxsziarmr</td>\n",
-       "      <td>4</td>\n",
-       "      <td>input/train/kcxsziarmr.jpeg</td>\n",
+       "      <td>zllfkikwrw</td>\n",
+       "      <td>24</td>\n",
+       "      <td>input/train/zllfkikwrw.jpeg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fbjxcxgdxv</td>\n",
-       "      <td>25</td>\n",
-       "      <td>input/train/fbjxcxgdxv.jpeg</td>\n",
+       "      <td>qeiqjoqakl</td>\n",
+       "      <td>20</td>\n",
+       "      <td>input/train/qeiqjoqakl.jpeg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,14 +172,14 @@
       ],
       "text/plain": [
        "     image_id  target                   image_path\n",
-       "0  jmwdcbkdqn      11  input/train/jmwdcbkdqn.jpeg\n",
-       "1  azjintiubk      20  input/train/azjintiubk.jpeg\n",
-       "2  iagdhkonwb       2  input/train/iagdhkonwb.jpeg\n",
-       "3  kcxsziarmr       4  input/train/kcxsziarmr.jpeg\n",
-       "4  fbjxcxgdxv      25  input/train/fbjxcxgdxv.jpeg"
+       "0  vyctxmodyu      12  input/train/vyctxmodyu.jpeg\n",
+       "1  kghlqhpshk      14  input/train/kghlqhpshk.jpeg\n",
+       "2  rfznywdgjo      19  input/train/rfznywdgjo.jpeg\n",
+       "3  zllfkikwrw      24  input/train/zllfkikwrw.jpeg\n",
+       "4  qeiqjoqakl      20  input/train/qeiqjoqakl.jpeg"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +200,108 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "b69c626d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>target</th>\n",
+       "      <th>image_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>olcqzjjmps</td>\n",
+       "      <td>0</td>\n",
+       "      <td>input/test/olcqzjjmps.jpeg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>qonrlmzrze</td>\n",
+       "      <td>0</td>\n",
+       "      <td>input/test/qonrlmzrze.jpeg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>oguhficayk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>input/test/oguhficayk.jpeg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>jxivhbyazh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>input/test/jxivhbyazh.jpeg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ywwoqmkfjk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>input/test/ywwoqmkfjk.jpeg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_id  target                  image_path\n",
+       "0  olcqzjjmps       0  input/test/olcqzjjmps.jpeg\n",
+       "1  qonrlmzrze       0  input/test/qonrlmzrze.jpeg\n",
+       "2  oguhficayk       0  input/test/oguhficayk.jpeg\n",
+       "3  jxivhbyazh       0  input/test/jxivhbyazh.jpeg\n",
+       "4  ywwoqmkfjk       0  input/test/ywwoqmkfjk.jpeg"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.rename(\n",
+    "    columns = {\n",
+    "        # 'id': 'image_id', \n",
+    "        'digit_sum':'target'\n",
+    "    }, \n",
+    "    \n",
+    "    inplace = True\n",
+    ")\n",
+    "\n",
+    "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bf2748a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "93e947e8-aa8c-4a87-a10d-3e68be8ba0a1",
    "metadata": {},
    "outputs": [
@@ -232,33 +334,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>jmwdcbkdqn</td>\n",
-       "      <td>input/train/jmwdcbkdqn.jpeg</td>\n",
-       "      <td>11</td>\n",
+       "      <td>vyctxmodyu</td>\n",
+       "      <td>input/train/vyctxmodyu.jpeg</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>azjintiubk</td>\n",
-       "      <td>input/train/azjintiubk.jpeg</td>\n",
-       "      <td>20</td>\n",
+       "      <td>kghlqhpshk</td>\n",
+       "      <td>input/train/kghlqhpshk.jpeg</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>iagdhkonwb</td>\n",
-       "      <td>input/train/iagdhkonwb.jpeg</td>\n",
-       "      <td>2</td>\n",
+       "      <td>rfznywdgjo</td>\n",
+       "      <td>input/train/rfznywdgjo.jpeg</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>kcxsziarmr</td>\n",
-       "      <td>input/train/kcxsziarmr.jpeg</td>\n",
-       "      <td>4</td>\n",
+       "      <td>zllfkikwrw</td>\n",
+       "      <td>input/train/zllfkikwrw.jpeg</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fbjxcxgdxv</td>\n",
-       "      <td>input/train/fbjxcxgdxv.jpeg</td>\n",
-       "      <td>25</td>\n",
+       "      <td>qeiqjoqakl</td>\n",
+       "      <td>input/train/qeiqjoqakl.jpeg</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -266,14 +368,14 @@
       ],
       "text/plain": [
        "     image_id                   image_path  target\n",
-       "0  jmwdcbkdqn  input/train/jmwdcbkdqn.jpeg      11\n",
-       "1  azjintiubk  input/train/azjintiubk.jpeg      20\n",
-       "2  iagdhkonwb  input/train/iagdhkonwb.jpeg       2\n",
-       "3  kcxsziarmr  input/train/kcxsziarmr.jpeg       4\n",
-       "4  fbjxcxgdxv  input/train/fbjxcxgdxv.jpeg      25"
+       "0  vyctxmodyu  input/train/vyctxmodyu.jpeg      12\n",
+       "1  kghlqhpshk  input/train/kghlqhpshk.jpeg      14\n",
+       "2  rfznywdgjo  input/train/rfznywdgjo.jpeg      19\n",
+       "3  zllfkikwrw  input/train/zllfkikwrw.jpeg      24\n",
+       "4  qeiqjoqakl  input/train/qeiqjoqakl.jpeg      20"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,6 +388,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e181b39d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>olcqzjjmps</td>\n",
+       "      <td>input/test/olcqzjjmps.jpeg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>qonrlmzrze</td>\n",
+       "      <td>input/test/qonrlmzrze.jpeg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>oguhficayk</td>\n",
+       "      <td>input/test/oguhficayk.jpeg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>jxivhbyazh</td>\n",
+       "      <td>input/test/jxivhbyazh.jpeg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ywwoqmkfjk</td>\n",
+       "      <td>input/test/ywwoqmkfjk.jpeg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_id                  image_path  target\n",
+       "0  olcqzjjmps  input/test/olcqzjjmps.jpeg       0\n",
+       "1  qonrlmzrze  input/test/qonrlmzrze.jpeg       0\n",
+       "2  oguhficayk  input/test/oguhficayk.jpeg       0\n",
+       "3  jxivhbyazh  input/test/jxivhbyazh.jpeg       0\n",
+       "4  ywwoqmkfjk  input/test/ywwoqmkfjk.jpeg       0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change order of columns\n",
+    "df_test = df_test[['image_id', 'image_path', 'target']]\n",
+    "\n",
+    "df_test.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5bf720f-357d-4445-88b1-99019228b041",
    "metadata": {},
@@ -295,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "812bfdc6-6a23-4edd-82d2-9b2fa99f9b2d",
    "metadata": {},
    "outputs": [
@@ -329,37 +519,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>jmwdcbkdqn</td>\n",
-       "      <td>input/train/jmwdcbkdqn.jpeg</td>\n",
-       "      <td>11</td>\n",
+       "      <td>vyctxmodyu</td>\n",
+       "      <td>input/train/vyctxmodyu.jpeg</td>\n",
+       "      <td>12</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>azjintiubk</td>\n",
-       "      <td>input/train/azjintiubk.jpeg</td>\n",
-       "      <td>20</td>\n",
+       "      <td>kghlqhpshk</td>\n",
+       "      <td>input/train/kghlqhpshk.jpeg</td>\n",
+       "      <td>14</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>iagdhkonwb</td>\n",
-       "      <td>input/train/iagdhkonwb.jpeg</td>\n",
-       "      <td>2</td>\n",
+       "      <td>rfznywdgjo</td>\n",
+       "      <td>input/train/rfznywdgjo.jpeg</td>\n",
+       "      <td>19</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>kcxsziarmr</td>\n",
-       "      <td>input/train/kcxsziarmr.jpeg</td>\n",
-       "      <td>4</td>\n",
+       "      <td>zllfkikwrw</td>\n",
+       "      <td>input/train/zllfkikwrw.jpeg</td>\n",
+       "      <td>24</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>fbjxcxgdxv</td>\n",
-       "      <td>input/train/fbjxcxgdxv.jpeg</td>\n",
-       "      <td>25</td>\n",
+       "      <td>qeiqjoqakl</td>\n",
+       "      <td>input/train/qeiqjoqakl.jpeg</td>\n",
+       "      <td>20</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -368,14 +558,14 @@
       ],
       "text/plain": [
        "     image_id                   image_path  target  fold\n",
-       "0  jmwdcbkdqn  input/train/jmwdcbkdqn.jpeg      11   2.0\n",
-       "1  azjintiubk  input/train/azjintiubk.jpeg      20   0.0\n",
-       "2  iagdhkonwb  input/train/iagdhkonwb.jpeg       2   3.0\n",
-       "3  kcxsziarmr  input/train/kcxsziarmr.jpeg       4   2.0\n",
-       "4  fbjxcxgdxv  input/train/fbjxcxgdxv.jpeg      25   0.0"
+       "0  vyctxmodyu  input/train/vyctxmodyu.jpeg      12   2.0\n",
+       "1  kghlqhpshk  input/train/kghlqhpshk.jpeg      14   0.0\n",
+       "2  rfznywdgjo  input/train/rfznywdgjo.jpeg      19   3.0\n",
+       "3  zllfkikwrw  input/train/zllfkikwrw.jpeg      24   2.0\n",
+       "4  qeiqjoqakl  input/train/qeiqjoqakl.jpeg      20   0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "25b9fe9e-0851-4452-ba1b-397a97c03a9d",
    "metadata": {},
    "outputs": [],
@@ -406,32 +596,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "024b22f9-c3ce-4568-b102-a1324b0a5d2c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(28000, 2)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.to_csv(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06d29199-e2b3-4bc8-87ee-e4796c05ed38",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_test.to_csv(\"input/test.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -450,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
